# lcctop

./: Gemfile  README.md  Rakefile
docs/: work_log.md
lib/: lcctop.rb
lib/lcctop/: codex_watcher.rb  config.rb  hook_event.rb  hook_handler.rb  hook_input.rb  logger.rb  session.rb  session_name_lookup.rb  session_status.rb  terminal_info.rb  waybar_output.rb
plugins/ags/: .gitignore  app.ts  app.tsx  style.css  style.scss
plugins/ags/lib/: focus.ts  sessions.ts  types.ts
plugins/ags/widget/: SessionCard.tsx  SessionPicker.tsx  StatusDot.tsx
plugins/cctop/hooks/: hooks.json  run-hook.sh
plugins/opencode/: plugin.js
plugins/pygtk4/: colors.py  focus.py  picker.py  sessions.py  style.css  widgets.py
plugins/tauri/: hyprland-rules.conf  index.html  package.json  vite.config.ts
plugins/tauri/src/: App.svelte  SessionCard.svelte  app.css
plugins/tauri/src-tauri/: Cargo.toml  tauri.conf.json
plugins/tauri/src-tauri/capabilities/: default.json
plugins/tauri/src-tauri/src/: lib.rs  main.rs
plugins/tauri/src/lib/: sessions.ts  types.ts
systemd/: lcctop-codex.service
test/: test_codex_watcher.rb  test_helper.rb  test_hook_event.rb  test_hook_handler.rb  test_hook_input.rb  test_session.rb  test_session_status.rb  test_waybar_output.rb
themed/: lcctop-pick-colors.json.tpl  lcctop-waybar.css.tpl
